--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="main.css"></head>
 	<title></title>
 </head>
@@ -47,7 +48,7 @@
 		<div class="cta men"></div>
 		<div class="cta women"></div>
 
-		<div class="nav">
+		<div class="breadcrumbs">
 			<div class="dot dot1"></div>
 			<div class="dot dot2"></div>
 			<div class="dot dot3"></div>
@@ -55,7 +56,11 @@
 			<div class="dot dot5"></div>
 		</div>
 
+
+
 		<div id="intro"></div>
+		<div id="introLogo"></div>
+
 
 	</div>
 
